--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,15 @@
 }
 /* Base */
 .conteiner {
-  max-width: 425px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+@media (min-width: 428px) {
+  .conteiner {
+    max-width: 428px;
+  }
 }
 
 body {
@@ -114,7 +118,9 @@ ul {
 }
 .page-addres {
   display: flex;
-  gap: 40px;
+  flex-direction: column;
+  gap: 12px;
+  padding: 16px 0px;
   font-style: normal;
 }
 .page-addres .link {
@@ -129,19 +135,13 @@ ul {
 .page-addres .link:hover {
   color: var(--clr-button-on);
 }
-.heder-contacts {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  padding: 16px 0px;
-}
 @media (min-width: 1200px) {
-  .heder-contacts {
+  .page-addres {
     flex-direction: row;
-
     gap: 40px;
   }
 }
+
 .header-conteiner-mobile {
   display: flex;
   align-items: center;
@@ -279,7 +279,12 @@ ul {
 }
 
 .section {
-  padding: 120px 0;
+  padding: 96px 0;
+}
+@media (min-width: 1200px) {
+  .section {
+    padding: 120px 0;
+  }
 }
 .non-padding {
   padding-top: 0px;
@@ -514,6 +519,12 @@ ul {
   background: var(--clr-background-dark);
   padding-top: 96px;
   padding-bottom: 96px;
+}
+@media (min-width: 1200px) {
+  .section-background {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 .team {
   text-align: center;
@@ -958,9 +969,7 @@ ul {
 }
 
 /* customers */
-.customers-conteiner {
-  width: 396px;
-}
+
 @media (min-width: 768px) {
   .customers-conteiner {
     width: 582px;
